# rocket-loadavg-api

./: Cargo.toml  README.es.md  README.md
src/: main.rs
