[package]
name = "rocket-loadavg-api"
version = "0.1.0"
authors = ["Sebastián Magrí <sebasmagri@gmail.com>"]

[dependencies]
libc = "*"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
# rocket_contrib = { version = "0.3.6", features = ["json"], default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = ["json"]
